Added users and input box

--- a/app/views/messages/_message.html.erb
+++ b/app/views/messages/_message.html.erb
@@ -1,3 +1,9 @@
 <div id="message">
-  <p><%= message.content %></p>
+  <a href="" class="message_user"><%= message.user.email %></a>
+  <span class="message_timestamp">
+    <%= message.created_at %>
+  </span>
+  <span class="message_content">
+    <%= message.content %>
+  </span>
 </div>
